# WMM-Vortex-support

./: CMakeLists.txt  README.md
configs/lang/: EN.ini  RU.ini
include/: CScrollWindow.h  Core.h  ModManager.h
src/: vortex.cpp  vortex.h  widgets.cpp
